--- a/kadai_005/html/kadai_005.html
+++ b/kadai_005/html/kadai_005.html
@@ -10,7 +10,7 @@
     <p>私は中学時代にサッカーを始めました。<br>現在はサッカーのコーチとして活動をして、趣味のサッカーを楽しんでいます。
     </p>
     <p>
-    <a><img src="E:/cord/kadai_005/imges/sample.jpg" alt="写真"></a><br>
+    <a><img src="imges/sample.jpg" alt="写真"></a><br>
     <a href="https://x.com/samuraijuku">私のプロフィールはこちら</a>
     </p>
 </body>
